--- a/TestBuild/SolusArkD_Data/boot.config
+++ b/TestBuild/SolusArkD_Data/boot.config
@@ -1,3 +1,7 @@
+player-connection-mode=Listen
+player-connection-guid=213159829
+player-connection-debug=0
+player-connection-ip=192.168.1.14
 gfx-enable-gfx-jobs=
 gfx-enable-native-gfx-jobs=
 wait-for-native-debugger=0
